--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+	<link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
      <style type="text/css">
   body {    font-family: 'Sansita', 'Open Sans';}
