--- a/index.html
+++ b/index.html
@@ -3,58 +3,23 @@
   <head>
     <meta charset="UTF-8" />
 	<link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+	
      <style type="text/css">
-  body {    font-family: 'Sansita', 'Open Sans';}
-
-.row-padding {
-  padding: 40px;
-}
-
-h1 {  text-align: center;
-  color: #fff;}
-h2 {  text-align: center;
-  color: #1e21df;
-  padding-bottom: 20px;}
-
-p {  line-height: 30px;}
-
-.image {
-  background-image:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(https://usa-info.com.ua/images/white-house.jpg);
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 200px 0;
-}
-}
-.block {
-  width: 100%;
-  padding: 10px 0;
-}
-.about {
-  padding: 0, 0, 10px, 0;
-  text-align: left;
-}
-.profile-img {
-  width: 10%;
-  display: block;
-  margin: 0 auto;
-}
-
-
-.divider {
-  height: 1px;
-  width: 75%;
-  background-color: #e5e5e5;
-}
-
-
+ 
 
   </style>
     <title>Résumé</title>
   </head>
   <body>
+  
+  
+  <main>
+  <article>
+    <div class="page" style="border-color: midnightblue;">
+      <!-- Content -->
+    </div>
+  </article>
+</main>
        <header>
          <div class="image">  <h1>Hi There! </br></h1>
           <h1><strong>I'm DONALD TRUMP</strong> and I'm <strong>President</strong></h1>
