--- a/index.html
+++ b/index.html
@@ -20,6 +20,48 @@
     </div>
   </article>
 </main>
+
+
+<div class="stackable grid">
+  <div class="row">
+    <div class="three wide center aligned column">
+      <!-- Avatar -->
+    </div>
+    <div class="thirteen wide column">
+      <div class="stackable grid">
+        <div class="sixteen wide column">
+          <!-- Name, job, contacts -->
+        </div>
+        <div class="sixteen wide mobile only column">
+          <div class="divider"></div>
+        </div>
+        <div class="sixteen wide column">
+          <!-- Intro -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="sixteen wide column">
+      <div class="fat divider"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="ten wide column">
+      <!-- Experience -->
+    </div>
+    <div class="six wide column">
+      <!-- Languages -->
+      <!-- Skills -->
+      <!-- Character -->
+      <!-- Likes -->
+      <!-- Dislikes -->
+      <!-- Wants -->
+      <!-- Education -->
+      <!-- Articles -->
+    </div>
+  </div>
+</div>
        <header>
          <div class="image">  <h1>Hi There! </br></h1>
           <h1><strong>I'm DONALD TRUMP</strong> and I'm <strong>President</strong></h1>
